--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,14 @@
 }
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary-color: #bf1109;
+  --secondary-color: #14a83a;
+  --primary-dark-color: #0c0c1c;
+  --orange-color: #ffb200;
+  --white-color: #ffffff;
+  --gray-color: #f7f1e1;
+  --gray-light-color: #f5f5f5;
+  --text-color: #484848;
 }
 
 @media (prefers-color-scheme: dark) {
