--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,8 @@
   --gray-color: #f7f1e1;
   --gray-light-color: #f5f5f5;
   --text-color: #484848;
+  --font-barlow: var(--font-barlow-sans);
+  --font-hanken: var(--font-hanken-sans);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -26,5 +28,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-barlow);
 }
