--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,6 @@
   --gray-color: #f7f1e1;
   --gray-light-color: #f5f5f5;
   --text-color: #484848;
-  --font-barlow: var(--font-barlow-sans);
-  --font-hanken: var(--font-hanken-sans);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -28,5 +26,155 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: var(--font-barlow);
+  font-family: var(--font-barlow-sans);
+}
+
+.font-barlow {
+  font-family: var(--font-barlow-sans) !important;
+}
+
+.font-hanken {
+  font-family: var(--font-hanken-sans) !important;
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeInDown {
+  animation: fadeInDown 1s ease-in-out forwards;
+  -webkit-animation: fadeInDown 1s ease-in-out forwards;
+  animation-delay: 0.7s;
+  -webkit-animation-delay: 0.7s;
+  opacity: 0;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    -ms-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeInUp {
+  animation: fadeInUp 1s ease-in-out forwards;
+  -webkit-animation: fadeInUp 1s ease-in-out forwards;
+  animation-delay: 0.7s;
+  -webkit-animation-delay: 0.7s;
+  opacity: 0;
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-20px);
+    -ms-transform: translateX(-20px);
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+
+.animate-fadeInLeft {
+  animation: fadeInLeft 1s ease-in-out forwards;
+  -webkit-animation: fadeInLeft 1s ease-in-out forwards;
+  animation-delay: 0.7s;
+  -webkit-animation-delay: 0.7s;
+  opacity: 0;
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
+    -moz-transform: translateX(20px);
+    -o-transform: translateX(20px);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+    -moz-transform: translateX(0);
+    -o-transform: translateX(0);
+  }
+}
+
+.animate-fadeInRight {
+  animation: fadeInRight 1s ease-in-out forwards;
+  -webkit-animation: fadeInRight 1s ease-in-out forwards;
+  animation-delay: 0.7s;
+  -webkit-animation-delay: 0.7s;
+  opacity: 0;
+}
+
+@keyframes bounceInUpShape {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animate-bounceInUpShape {
+  animation: bounceInUpShape 1s ease-in-out forwards;
+  -webkit-animation: bounceInUpShape 1s ease-in-out forwards;
+}
+
+@keyframes slideInRight {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animate-slideInRight {
+  animation: slideInRight 0.5s ease-in-out forwards;
+  -webkit-animation: slideInRight 0.5s ease-in-out forwards;
+}
+
+.animate-slideInLeft {
+  animation: slideInLeft 0.5s ease-in-out forwards;
+  -webkit-animation: slideInLeft 0.5s ease-in-out forwards;
 }
